@@ -150,6 +150,10 @@ public class TabWidget implements IWidget
       _delegate.setBounds(rectangle);
    }
 
+   public Rectangle getBounds() {
+   	return _delegate.getBounds();
+   }
+   
    public JInternalFrame getInternalFrame()
    {
       return _delegate.getInternalFrame();
